# paperhackingApp

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AllPapersPage.tsx  FilledSummaries.tsx  GamificationBadge.tsx  HomePage.tsx  NeuralBackground.tsx  OnboardingPage.tsx  PDFViewer.tsx  PaperNode.tsx  ReadingPlansPage.tsx  SettingsPage.tsx  Sidebar.tsx  SummaryEditor.tsx  SynthesesPage.tsx  SynthesisEditor.tsx  TermsPage.tsx
src/components/ui/: auto-resize-textarea.tsx
src/data/: types.ts
src/hooks/: usePaperState.ts  useResizable.ts
src/lib/: links.ts  persistence.ts
