[package]
name = "paperhacking"
version = "1.1.0"
description = "PaperHacking - Research Reading Workbench"
authors = ["PaperHacking"]
edition = "2021"

[lib]
name = "paperhacking_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
